modified:   core/__pycache__/settings.cpython-311.pyc 	modified:   core/settings.py 	modified:   db.sqlite3 	deleted:    staticfiles/css/style.css.map 	modified:   templates/dashboard/dashboard_template.html 	modified:   templates/main/index.html 	modified:   templates/main/login.html

--- a/templates/dashboard/dashboard_template.html
+++ b/templates/dashboard/dashboard_template.html
@@ -7,12 +7,12 @@
     <link rel="shortcut icon" href="{% static 'img/icon.ico' %}" />
     <link rel="stylesheet" href="{% static 'css/dash.css' %}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>GarageManager | {% block title %}{% endblock %}</title>
+    <title>Garage | {% block title %}{% endblock %}</title>
 </head>
 <body class="dark">
 
     <header>
-        <div class="logo"><a href="/">GarageManager</a></div>
+        <div class="logo"><a href="/">Garage</a></div>
         <div class="container">
             <div id="themeButton"><i class='bx bx-moon'></i></div>
             <i class='bx bx-bell'></i>
