--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -7,17 +7,17 @@
     <link rel="shortcut icon" href="{% static 'img/icon.ico' %}" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>GarageManager | Acceuil</title>
+    <title>Garage | Acceuil</title>
 </head>
 <body>
 
     <header>
-        <a href="/"><div class="logo">GarageManager</div></a>
+        <a href="/"><div class="logo">Garage</div></a>
         <a href="/login"><button>Connexion</button></a>
     </header>
 
     <div class="container">
-        <p>GarageManager</p>
+        <p>Garage</p>
     </div>
 
     <!-- <div class="card-container">
