--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -7,12 +7,12 @@
     <link rel="shortcut icon" href="{% static 'img/icon.ico' %}" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>GarageManager | Se connecter</title>
+    <title>Garage | Se connecter</title>
 </head>
 <body>
 
     <header>
-        <a href="/"><div class="logo">GarageManager</div></a>
+        <a href="/"><div class="logo">Garage</div></a>
         <a href="/login"><button>Connexion</button></a>
     </header>
 
